tinyc/test/bad/enum-assignment-global.c
enum {
    x = 20,
};

int main()
{
    x = 30;

    return 0;
}
